# Resume

./: .gitignore  Makefile  README.md  pyproject.toml  resume.json  resume.yaml
.github/workflows/: gist.yml
assets/img/logos/: techrescue.jpeg:Zone.Identifier  usdr.jpeg:Zone.Identifier
examples/enhancv/: altacv.cls
resume_cli/: job_reader.py  llm_tailor.py  main.py
resume_cli/latex/: helpers.py  render.py
resume_cli/schemas/: enhancv.json  enhancv_limits.yaml  onepage_enhancv.json  twopage_enhancv.json
resume_cli/styles/enhancv/: style.cls
resume_cli/styles/standard/: style.cls
resume_cli/templates/: .gitignore
resume_cli/templates/enhancv/: resume.tex.j2
resume_cli/templates/enhancv/sections/: certification.tex.j2  education.tex.j2  experience.tex.j2  interests.tex.j2  key_achievements.tex.j2  languages.tex.j2  projects.tex.j2  skills.tex.j2
resume_cli/templates/full/: resume.tex.j2
resume_cli/templates/full/sections/: certification.tex.j2  education.tex.j2  experience.tex.j2  interests.tex.j2  key_achievements.tex.j2  languages.tex.j2  skills.tex.j2
resume_cli/templates/letters/: letter.tex.j2
resume_cli/templates/onepage/: resume.tex.j2
resume_cli/templates/onepage/sections/: certification.tex.j2  education.tex.j2  experience.tex.j2  interests.tex.j2  key_achievements.tex.j2  languages.tex.j2
resume_cli/templates/standard/: resume.tex.j2
resume_cli/templates/standard/sections/: education.tex.j2  experience.tex.j2  interests.tex.j2  skills.tex.j2  training.tex.j2
scripts/: populate_work_from_csv.py
tests/: test_converters.py
